some changes and add see more button

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
 
-  <title>Draculas boudler spot</title>
+  <title>Draculas boulder spot</title>
 </head>
 <body>
 
@@ -25,28 +25,31 @@
     <div class="row">
       <div class="col-sm">
         <div class="media">
-          <img src="images/me.jpg" class="mr-3" alt="me" width="100">
+          <img src="images/me.jpg" class="align-self-center mr-3" alt="me" width="100">
           <div class="media-body">
             <h5 class="mt-0">Bio</h5>
-            If you want to know more about me.
+            <p>If you want to know more about me.</p>
+            <a href="bio.html" class="btn btn-outline-danger btn-sm" role="button">See more</a>
           </div>
         </div>
       </div>
       <div class="col-sm">
         <div class="media">
-          <img src="images/climbing.jpg" class="mr-3" alt="me" width="100">
+          <img src="images/climbing.jpg" class="align-self-center mr-3" alt="me" width="100">
           <div class="media-body">
             <h5 class="mt-0">Sport climbing</h5>
-            I like climbing, let me talk about it a bit.
+            <p>I like climbing, let me talk about it a bit.</p>
+            <a href="climbing.html" class="btn btn-outline-danger btn-sm" role="button">See more</a>
           </div>
         </div>
       </div>
       <div class="col-sm">
         <div class="media">
-          <img src="images/coffee.jpg" class="mr-3" alt="me" width="100">
+          <img src="images/coffee.jpg" class="align-self-center mr-3" alt="me" width="100">
           <div class="media-body">
             <h5 class="mt-0">Coffee corner</h5>
-            Let's talk around a hot Coffee
+            <p>Let's talk around a hot Coffee</p>
+            <a href="coffee.html" class="btn btn-outline-danger btn-sm" role="button">See more</a>
           </div>
         </div>
       </div>
