--- a/climbing.html
+++ b/climbing.html
@@ -4,11 +4,12 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
 
-  <title>Draculas boudler spot</title>
+  <title>Climbing</title>
 </head>
-<body>
 
-  <nav class="navbar">
+<body class="flex-column">
+
+  <nav class="navbar navbar-dark">
     <a class="nav-link" href="index.html">Home</a>
     <a class="nav-link" href="bio.html">Bio</a>
     <a class="nav-link" href="climbing.html">Climbing</a>
@@ -16,10 +17,23 @@
   </nav>
 
   <div class="container">
-      Hello climbing!
+    <h1 class="mt-5">Climbing</h1>
+    <div class="row">
+      <div class="col-md-4">
+        <img src="images/climbing.jpg" class="align-self-center mr-3" alt="me" width="200">
+      </div>
+      <div class="col-md-8">
+        <p class="text-justify">
+          My name is Mathieu, I have two young kids.
+
+          I work in a large software company and I'm learning programming because I enjoy it and I want to know how it works.
+        </p>
+      </div>
+    </div>
   </div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
