--- a/index.html
+++ b/index.html
@@ -6,14 +6,16 @@
 
   <title>Draculas boulder spot</title>
 </head>
-<body>
 
-  <nav class="navbar">
+<body class="flex-column">
+
+  <nav class="navbar navbar-dark">
     <a class="nav-link" href="index.html">Home</a>
     <a class="nav-link" href="bio.html">Bio</a>
     <a class="nav-link" href="climbing.html">Climbing</a>
     <a class="nav-link" href="coffee.html">Coffee corner</a>
   </nav>
+
   <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <h1 class="display-4">Hello, world!</h1>
