add lists, table and @media query

--- a/climbing.html
+++ b/climbing.html
@@ -17,23 +17,36 @@
   </nav>
 
   <div class="container">
-    <h1 class="mt-5">Climbing</h1>
-    <div class="row">
-      <div class="col-md-4">
-        <img src="images/climbing.jpg" class="align-self-center mr-3" alt="me" width="200">
-      </div>
-      <div class="col-md-8">
-        <p class="text-justify">
-          My name is Mathieu, I have two young kids.
-
-          I work in a large software company and I'm learning programming because I enjoy it and I want to know how it works.
-        </p>
-      </div>
-    </div>
+    <h1 class="mt-5 text-center">Climbing</h1>
+    <img src="images/climbing.jpg" class="img-fluid" alt="climbing"  width="100%" >
+    <p class="text-justify">
+      Even if I would love to do some traditional climbing and enjoy the challenge and spend lots of time outdoor... practicing rock climbing in a big city is quite difficult and indoor climbing is almost the only alternative.
+    </p>
+    <p class="text-justify">
+      But don't get me wrong, sport climbing is a lot of fun even indoor. The challenge is always here, you can work on strengh and flexibility, and you can go whenever you want no matter the weather.
+    </p>
+    <h2>My climbing gear</h2>
+    <p class="text-justify">
+      After renting my gear at the gym for a while, I now have my own:
+    </p>
+    <table class="table table-bordered table-striped table-dark">
+      <tr>
+        <th>Belay device</th>
+        <td>Petzl Reverso</td>
+      </tr>
+      <tr>
+        <th>Climbing harness</th>
+        <td>Black Diamond Solution</td>
+      </tr>
+      <tr>
+        <th>Climbing shoe</th>
+        <td>Red Chili Circuit Lace</td>
+      </tr>
+    </table>
+    <p class="text-justify">
+      So grab your shoes and climb!
+    </p>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
