--- a/coffee.html
+++ b/coffee.html
@@ -17,23 +17,40 @@
   </nav>
 
   <div class="container">
-    <h1 class="mt-5">Coffee</h1>
-    <div class="row">
-      <div class="col-md-4">
-        <img src="images/coffee.jpg" class="align-self-center mr-3" alt="me" width="200">
-      </div>
-      <div class="col-md-8">
-        <p class="text-justify">
-          My name is Mathieu, I have two young kids.
-
-          I work in a large software company and I'm learning programming because I enjoy it and I want to know how it works.
-        </p>
-      </div>
-    </div>
+    <h1 class="mt-5 text-center">Coffee</h1>
+    <img src="images/coffee.jpg" class="img-fluid" alt="coffee"  width="100%" >
+    <p class="text-justify">
+      A good coffee.
+    </p>
+    <p class="text-justify">
+      Few years ago I discovered slow coffee and bought me a Hario V60 Brewer. The result is very good... but maybe not the first time, the pour over method is not easy.
+    </p>
+    <p class="text-justify">
+      Now it's part of my daily routine and I'd like to share with you my recipe.
+    </p>
+    <h2>What do you need?</h2>
+    <p class="text-justify">
+      Yes you need some tools, but not that much:
+    </p>
+    <ul>
+      <li>a Hario V60 dripper</li>
+      <li>a paper coffee filter</li>
+      <li>a water kettle</li>
+      <li>fresh grounds of coffee</li>
+      <li>a grinder</li>
+    </ul>
+    <h2>My method</h2>
+    <p class="text-justify">
+      Yes you need some tools, but not that much:
+    </p>
+    <ol>
+      <li>Rinse</li>
+      <li>Grind</li>
+      <li>Bloom</li>
+      <li>Pour</li>
+      <li>Enjoy your cup of coffee...</li>
+    </ul>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 </html>
