--- a/climbing.html
+++ b/climbing.html
@@ -20,16 +20,16 @@
     <h1 class="mt-5 text-center">Climbing</h1>
     <img src="images/climbing.jpg" class="img-fluid" alt="climbing"  width="100%" >
     <p class="text-justify">
-      Even if I would love to do some traditional climbing and enjoy the challenge and spend lots of time outdoor... practicing rock climbing in a big city is quite difficult and indoor climbing is almost the only alternative.
+      Even if I would love to do some traditional climbing and spend lots of time outdoor... practicing rock climbing in a big city is quite difficult and indoor climbing is almost the only alternative.
     </p>
     <p class="text-justify">
-      But don't get me wrong, sport climbing is a lot of fun even indoor. The challenge is always here, you can work on strengh and flexibility, and you can go whenever you want no matter the weather.
+      But don't get me wrong, sport climbing is a lot of fun even indoor. It's very challenging, you can work on strengh and flexibility, and you can go whenever you want no matter the weather.
     </p>
     <h2>My climbing gear</h2>
     <p class="text-justify">
       After renting my gear at the gym for a while, I now have my own:
     </p>
-    <table class="table table-bordered table-striped table-dark">
+    <table>
       <tr>
         <th>Belay device</th>
         <td>Petzl Reverso</td>
