--- a/coffee.html
+++ b/coffee.html
@@ -20,9 +20,6 @@
     <h1 class="mt-5 text-center">Coffee</h1>
     <img src="images/coffee.jpg" class="img-fluid" alt="coffee"  width="100%" >
     <p class="text-justify">
-      A good coffee.
-    </p>
-    <p class="text-justify">
       Few years ago I discovered slow coffee and bought me a Hario V60 Brewer. The result is very good... but maybe not the first time, the pour over method is not easy.
     </p>
     <p class="text-justify">
@@ -39,9 +36,9 @@
       <li>fresh grounds of coffee</li>
       <li>a grinder</li>
     </ul>
-    <h2>My method</h2>
+    <h2>Pour method</h2>
     <p class="text-justify">
-      Yes you need some tools, but not that much:
+      Now take some time and follow those steps:
     </p>
     <ol>
       <li>Rinse</li>
