--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        <div class="media">
+        <div class="img-card">
           <img src="images/me.jpg" class="align-self-center mr-3" alt="me" width="100">
           <div class="media-body">
             <h5 class="mt-0">Bio</h5>
@@ -36,7 +36,7 @@
         </div>
       </div>
       <div class="col-sm">
-        <div class="media">
+        <div class="img-card">
           <img src="images/climbing.jpg" class="align-self-center mr-3" alt="me" width="100">
           <div class="media-body">
             <h5 class="mt-0">Sport climbing</h5>
@@ -46,8 +46,8 @@
         </div>
       </div>
       <div class="col-sm">
-        <div class="media">
-          <img src="images/coffee.jpg" class="align-self-center mr-3" alt="me" width="100">
+        <div class="img-card">
+          <img src="images/coffee.jpg" class="align-self-center mr-3" alt="me">
           <div class="media-body">
             <h5 class="mt-0">Coffee corner</h5>
             <p>Let's talk around a hot Coffee</p>
