--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body class="flex-column">
 
   <nav class="navbar navbar-dark">
-    <a class="nav-link" href="index.html">Home</a>
+    <a class="nav-link nav-green" href="index.html">Home</a>
     <a class="nav-link" href="bio.html">Bio</a>
     <a class="nav-link" href="climbing.html">Climbing</a>
     <a class="nav-link" href="coffee.html">Coffee corner</a>
@@ -31,7 +31,7 @@
           <div class="media-body">
             <h5 class="mt-0">Bio</h5>
             <p>If you want to know more about me.</p>
-            <a href="bio.html" class="btn btn-outline-danger btn-sm" role="button">See more</a>
+            <a href="bio.html" class="btn btn-sm" role="button">See more</a>
           </div>
         </div>
       </div>
@@ -41,7 +41,7 @@
           <div class="media-body">
             <h5 class="mt-0">Sport climbing</h5>
             <p>I like climbing, let me talk about it a bit.</p>
-            <a href="climbing.html" class="btn btn-outline-danger btn-sm" role="button">See more</a>
+            <a href="climbing.html" class="btn btn-sm" role="button">See more</a>
           </div>
         </div>
       </div>
@@ -51,7 +51,7 @@
           <div class="media-body">
             <h5 class="mt-0">Coffee corner</h5>
             <p>Let's talk around a hot Coffee</p>
-            <a href="coffee.html" class="btn btn-outline-danger btn-sm" role="button">See more</a>
+            <a href="coffee.html" class="btn btn-sm" role="button">See more</a>
           </div>
         </div>
       </div>
